Avoiding instantiating of any Number Object, using .valueOf() instead
git-svn-id: http://svn.codehaus.org/qdox/trunk/qdox@1186 96a0d7f9-151b-0410-ba26-d816ff112d2f